Fixed the gap between the navbar and hero.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -764,16 +764,16 @@ a {
 
 .hero__image {
   width: 100%;
-  transform: translateX(5px);
+  transform: translateY(-100px);
 }
 
 @media screen and (min-width: 768px) {
   .hero {
-    padding-top: 0;
+    padding-top: 12rem;
   }
   .hero__content {
     text-align: left;
-    align-self: center;
+    /* align-self: center; */
   }
   .hero__btn {
     font-size: 1.5rem;
